# inflation-api

./: .coverage  .env.example  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  FEATURE_PLAN.md  LICENSE  Makefile  PREFERENCES.md  README.md  build.gradle.kts  project-plan.md  pyproject.toml  settings.gradle.kts
data/: custom_fetched.csv  data_sources.json  housing_fetched.csv  inflation_data.csv  sf_housing.csv
frontend/: .env.example  .eslintrc.cjs  .gitignore  index.html  package.json
frontend/src/: App.tsx  config.ts  styles.css
http/: README.md  current-value.http  error-cases.http  examples.http  health.http  inflation-rates.http  value-change.http
inflation_api/: __init__.py  config.py  main.py
inflation_api/adapters/: __init__.py  base.py  csv_adapter.py
inflation_api/api/: __init__.py  dependencies.py
inflation_api/api/v1/: __init__.py  inflation.py
inflation_api/core/: __init__.py  exceptions.py  logging.py
inflation_api/models/: __init__.py  data_source.py  inflation.py
inflation_api/repositories/: __init__.py  base.py  inflation_repository.py
inflation_api/services/: __init__.py  base.py  inflation_service.py
inflation_api/utils/: __init__.py  data_source_manager.py
requirements/: initial-feature.md
scripts/: data_sources.py  load_data.py
src/main/java/org/adamu/inflationapi/: InflationApiApplication.java
tests/: conftest.py
tests/data/: test_inflation_data.csv
tests/integration/test_api/: test_inflation_endpoints.py
tests/unit/test_adapters/: __init__.py  test_csv_adapter.py
tests/unit/test_models/: test_inflation.py
tests/unit/test_repositories/: test_inflation_repository.py
tests/unit/test_services/: test_inflation_service.py
tests/unit/test_utils/: test_data_source_manager.py
workflows/: implement-plan.md  plan-and-document.md  review-code.md  suggest-command-from-description.md
(+3 files in other folders)
